added javasoft vm best-finding and running

--- a/skeletons/simplewrap/mainres.rc
+++ b/skeletons/simplewrap/mainres.rc
@@ -3,6 +3,7 @@
 #define AUTRE 101
 #define AUTRE2 102
 #define AUTRE3 103
+#define AUTRE4 104
 
 STRINGTABLE
 BEGIN
@@ -14,3 +15,4 @@ END
 
 AUTRE2 JAVA "samplejar/main.txt"
 AUTRE3 JAVA "samplejar/sample.jar"
+
