--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -5,8 +5,8 @@ CPP  = g++.exe -D__DEBUG__
 CC   = gcc.exe -D__DEBUG__
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o $(RES)
-LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o $(RES)
+OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o $(RES)
+LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -mwindows 
 INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
@@ -33,6 +33,9 @@ JavasoftRuntimeList.o: JavasoftRuntimeList.cpp
 
 ResourceManager.o: ResourceManager.cpp
 	$(CPP) -c ResourceManager.cpp -o ResourceManager.o $(CXXFLAGS)
+
+Version.o: Version.cpp
+	$(CPP) -c Version.cpp -o Version.o $(CXXFLAGS)
 
 JWrap_private.res: JWrap_private.rc mainres.rc 
 	$(WINDRES) -i JWrap_private.rc -I rc -o JWrap_private.res -O coff 
