--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -5,25 +5,25 @@ CPP  = g++.exe -D__DEBUG__
 CC   = gcc.exe -D__DEBUG__
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o $(RES)
-LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o $(RES)
+OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o $(RES)
+LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -mwindows 
 INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
-BIN  = JWrap.exe
+BIN  = TEST5.exe
 CXXFLAGS = $(CXXINCS)  -g3
 CFLAGS = $(INCS)  -g3
 
 .PHONY: all all-before all-after clean clean-custom
 
-all: all-before JWrap.exe all-after
+all: all-before TEST5.exe all-after
 
 
 clean: clean-custom
 	rm -f $(OBJ) $(BIN)
 
 $(BIN): $(LINKOBJ)
-	$(CPP) $(LINKOBJ) -o "JWrap.exe" $(LIBS)
+	$(CPP) $(LINKOBJ) -o "TEST5.exe" $(LIBS)
 
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
@@ -36,6 +36,18 @@ ResourceManager.o: ResourceManager.cpp
 
 Version.o: Version.cpp
 	$(CPP) -c Version.cpp -o Version.o $(CXXFLAGS)
+
+Properties.o: Properties.cpp
+	$(CPP) -c Properties.cpp -o Properties.o $(CXXFLAGS)
+
+StringUtils.o: StringUtils.cpp
+	$(CPP) -c StringUtils.cpp -o StringUtils.o $(CXXFLAGS)
+
+FileUtils.o: FileUtils.cpp
+	$(CPP) -c FileUtils.cpp -o FileUtils.o $(CXXFLAGS)
+
+JVMLauncher.o: JVMLauncher.cpp
+	$(CPP) -c JVMLauncher.cpp -o JVMLauncher.o $(CXXFLAGS)
 
 JWrap_private.res: JWrap_private.rc mainres.rc 
 	$(WINDRES) -i JWrap_private.rc -I rc -o JWrap_private.res -O coff 
