--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -5,8 +5,8 @@ CPP  = g++.exe -D__DEBUG__
 CC   = gcc.exe -D__DEBUG__
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o $(RES)
-LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o $(RES)
+OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o $(RES)
+LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -mwindows 
 INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
@@ -48,6 +48,21 @@ FileUtils.o: FileUtils.cpp
 
 JVMLauncher.o: JVMLauncher.cpp
 	$(CPP) -c JVMLauncher.cpp -o JVMLauncher.o $(CXXFLAGS)
+
+SunJVMLauncher.o: SunJVMLauncher.cpp
+	$(CPP) -c SunJVMLauncher.cpp -o SunJVMLauncher.o $(CXXFLAGS)
+
+JVMRegistryLookup.o: JVMRegistryLookup.cpp
+	$(CPP) -c JVMRegistryLookup.cpp -o JVMRegistryLookup.o $(CXXFLAGS)
+
+DebugConsole.o: DebugConsole.cpp
+	$(CPP) -c DebugConsole.cpp -o DebugConsole.o $(CXXFLAGS)
+
+JavaMachineManager.o: JavaMachineManager.cpp
+	$(CPP) -c JavaMachineManager.cpp -o JavaMachineManager.o $(CXXFLAGS)
+
+JVMEnvVarLookup.o: JVMEnvVarLookup.cpp
+	$(CPP) -c JVMEnvVarLookup.cpp -o JVMEnvVarLookup.o $(CXXFLAGS)
 
 JWrap_private.res: JWrap_private.rc mainres.rc 
 	$(WINDRES) -i JWrap_private.rc -I rc -o JWrap_private.res -O coff 
