--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -5,8 +5,8 @@ CPP  = g++.exe -D__DEBUG__
 CC   = gcc.exe -D__DEBUG__
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o $(RES)
-LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o $(RES)
+OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
+LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
 LIBS =  -L"C:/Dev-Cpp/lib" -mwindows 
 INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
@@ -63,6 +63,9 @@ JavaMachineManager.o: JavaMachineManager.cpp
 
 JVMEnvVarLookup.o: JVMEnvVarLookup.cpp
 	$(CPP) -c JVMEnvVarLookup.cpp -o JVMEnvVarLookup.o $(CXXFLAGS)
+
+MSJViewLauncher.o: MSJViewLauncher.cpp
+	$(CPP) -c MSJViewLauncher.cpp -o MSJViewLauncher.o $(CXXFLAGS)
 
 JWrap_private.res: JWrap_private.rc mainres.rc 
 	$(WINDRES) -i JWrap_private.rc -I rc -o JWrap_private.res -O coff 
