added MessageBox when no VM is found

--- a/skeletons/simplewrap/mainres.rc
+++ b/skeletons/simplewrap/mainres.rc
@@ -4,3 +4,6 @@
 JARID JAVA "samplejar/sample.jar"
 PROPID JAVA "samplejar/sample.props"
 
+A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
+A3 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
+A4 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
