--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -5,31 +5,28 @@ CPP  = g++.exe -D__DEBUG__
 CC   = gcc.exe -D__DEBUG__
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
-LINKOBJ  = main.o JavasoftRuntimeList.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o JVMLauncher.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -mwindows 
-INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
-CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
-BIN  = TEST5.exe
+OBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
+LINKOBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
+LIBS =  -L"C:/Dev-Cpp/lib" -L"../common" -mwindows 
+INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
+CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
+BIN  = JWrap.exe
 CXXFLAGS = $(CXXINCS)  -g3
 CFLAGS = $(INCS)  -g3
 
 .PHONY: all all-before all-after clean clean-custom
 
-all: all-before TEST5.exe all-after
+all: all-before JWrap.exe all-after
 
 
 clean: clean-custom
 	rm -f $(OBJ) $(BIN)
 
 $(BIN): $(LINKOBJ)
-	$(CPP) $(LINKOBJ) -o "TEST5.exe" $(LIBS)
+	$(CPP) $(LINKOBJ) -o "JWrap.exe" $(LIBS)
 
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
-
-JavasoftRuntimeList.o: JavasoftRuntimeList.cpp
-	$(CPP) -c JavasoftRuntimeList.cpp -o JavasoftRuntimeList.o $(CXXFLAGS)
 
 ResourceManager.o: ResourceManager.cpp
 	$(CPP) -c ResourceManager.cpp -o ResourceManager.o $(CXXFLAGS)
@@ -45,9 +42,6 @@ StringUtils.o: StringUtils.cpp
 
 FileUtils.o: FileUtils.cpp
 	$(CPP) -c FileUtils.cpp -o FileUtils.o $(CXXFLAGS)
-
-JVMLauncher.o: JVMLauncher.cpp
-	$(CPP) -c JVMLauncher.cpp -o JVMLauncher.o $(CXXFLAGS)
 
 SunJVMLauncher.o: SunJVMLauncher.cpp
 	$(CPP) -c SunJVMLauncher.cpp -o SunJVMLauncher.o $(CXXFLAGS)
