--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -4,7 +4,7 @@ arguments=
 classpath=
 minversion=1.2
 maxversion=1.6
-jvmsearch=javahome,exepath,jrepath,jdkpath,registry,jview
+jvmsearch=javahome;exepath;jrepath;jdkpath;registry;jview
 localvmdir=jre
 basedir=samplejar
 skel_Message=Your computer does not have Java(tm) software installed.\nDo you want to download it?
