--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -7,9 +7,9 @@ WINDRES = windres.exe
 RES  = JWrap_private.res
 OBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
 LINKOBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -L"../common" -mwindows 
-INCS =  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
-CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"F:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
+LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib" -L"../common" -mwindows 
+INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
+CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
 BIN  = JWrap.exe
 CXXFLAGS = $(CXXINCS)  -g3
 CFLAGS = $(INCS)  -g3
