--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -1,11 +1,10 @@
-mainclassname=SampleApplication
-mainclassname2=JSmoothPropertiesDisplayer
-arguments=
-classpath=
-minversion=1.2
-maxversion=1.6
-jvmsearch=javahome;exepath;jrepath;jdkpath;registry;jview
-localvmdir=jre
-basedir=samplejar
-skel_Message=Your computer does not have Java(tm) software installed.\nDo you want to download it?
+arguments=arg1 arg2 arg3
+mainclassname=JSmoothPropertiesDisplayer
+classpath=sample.jar;..\\jsmoothgen.jar
+jvmsearch=registry;javahome;jrepath;jdkpath;exepath;jview
+minversion=
+maxversion=
+currentdir=.
+bundledvm=jre
+skel_Message=Java has not been found on your computer. Do you want to download it?
 skel_URL=http://www.java.com
