--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -2,9 +2,9 @@ arguments=arg1 arg2 arg3
 mainclassname=JSmoothPropertiesDisplayer
 classpath=sample.jar;..\\jsmoothgen.jar
 jvmsearch=registry;javahome;jrepath;jdkpath;exepath;jview
-minversion=
+minversion=1.1.99
 maxversion=
-currentdir=.
+currentdir=..\\..\\..
 bundledvm=jre
 skel_Message=Java has not been found on your computer. Do you want to download it?
 skel_URL=http://www.java.com
