--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -1,18 +1,18 @@
 # Project: JWrap
 # Makefile created by Dev-C++ 4.9.8.0
 
-CPP  = g++.exe -D__DEBUG__
-CC   = gcc.exe -D__DEBUG__
+CPP  = g++.exe
+CC   = gcc.exe
 WINDRES = windres.exe
 RES  = JWrap_private.res
-OBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
-LINKOBJ  = main.o ResourceManager.o Version.o Properties.o StringUtils.o FileUtils.o SunJVMLauncher.o JVMRegistryLookup.o DebugConsole.o JavaMachineManager.o JVMEnvVarLookup.o MSJViewLauncher.o $(RES)
-LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib" -L"../common" -mwindows 
-INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
-CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include" 
+OBJ  = main.o $(RES)
+LINKOBJ  = main.o $(RES)
+LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib" -L"../commonjava" -mwindows ../commonjava/CommonJava.a 
+INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"../commonjava" 
+CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"../commonjava" 
 BIN  = JWrap.exe
-CXXFLAGS = $(CXXINCS)  -g3
-CFLAGS = $(INCS)  -g3
+CXXFLAGS = $(CXXINCS) 
+CFLAGS = $(INCS) 
 
 .PHONY: all all-before all-after clean clean-custom
 
@@ -27,39 +27,6 @@ $(BIN): $(LINKOBJ)
 
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
-
-ResourceManager.o: ResourceManager.cpp
-	$(CPP) -c ResourceManager.cpp -o ResourceManager.o $(CXXFLAGS)
-
-Version.o: Version.cpp
-	$(CPP) -c Version.cpp -o Version.o $(CXXFLAGS)
-
-Properties.o: Properties.cpp
-	$(CPP) -c Properties.cpp -o Properties.o $(CXXFLAGS)
-
-StringUtils.o: StringUtils.cpp
-	$(CPP) -c StringUtils.cpp -o StringUtils.o $(CXXFLAGS)
-
-FileUtils.o: FileUtils.cpp
-	$(CPP) -c FileUtils.cpp -o FileUtils.o $(CXXFLAGS)
-
-SunJVMLauncher.o: SunJVMLauncher.cpp
-	$(CPP) -c SunJVMLauncher.cpp -o SunJVMLauncher.o $(CXXFLAGS)
-
-JVMRegistryLookup.o: JVMRegistryLookup.cpp
-	$(CPP) -c JVMRegistryLookup.cpp -o JVMRegistryLookup.o $(CXXFLAGS)
-
-DebugConsole.o: DebugConsole.cpp
-	$(CPP) -c DebugConsole.cpp -o DebugConsole.o $(CXXFLAGS)
-
-JavaMachineManager.o: JavaMachineManager.cpp
-	$(CPP) -c JavaMachineManager.cpp -o JavaMachineManager.o $(CXXFLAGS)
-
-JVMEnvVarLookup.o: JVMEnvVarLookup.cpp
-	$(CPP) -c JVMEnvVarLookup.cpp -o JVMEnvVarLookup.o $(CXXFLAGS)
-
-MSJViewLauncher.o: MSJViewLauncher.cpp
-	$(CPP) -c MSJViewLauncher.cpp -o MSJViewLauncher.o $(CXXFLAGS)
 
 JWrap_private.res: JWrap_private.rc mainres.rc 
 	$(WINDRES) -i JWrap_private.rc -I rc -o JWrap_private.res -O coff 
