added skel_KeyPress option command line arguments are now passed to the java app

--- a/skeletons/consolewrapper/samplejar/sample.props
+++ b/skeletons/consolewrapper/samplejar/sample.props
@@ -7,4 +7,4 @@ maxversion=
 currentdir=..\\..\\..
 bundledvm=jre
 skel_Message=Java has not been found on your computer. Do you want to download it?
-skel_URL=http://www.java.com
+skel_KeyPress=0
