--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -3,9 +3,12 @@ mainclassname=JSmoothPropertiesDisplayer
 mainclassname2=SampleApplication
 classpath=sample.jar;..\\jsmoothgen.jar
 jvmsearch=registry;javahome;jrepath;jdkpath;exepath;jview
-minversion=1.4
+minversion=1.1
 maxversion=
 currentdir=..\\..\\..
 bundledvm=jre
 skel_Message=Java has not been found on your computer. Do you want to download it?
 skel_URL=http://www.java.com
+javapropertiescount=1
+javaproperty_name_0=nom1
+javaproperty_value_0=valeur1
