--- a/skeletons/consolewrapper/samplejar/sample.props
+++ b/skeletons/consolewrapper/samplejar/sample.props
@@ -1,10 +1,12 @@
 arguments=arg1 arg2 arg3
 mainclassname=Sample
 classpath=sample.jar;..\\jsmoothgen.jar
-jvmsearch=registry;javahome;jrepath;jdkpath;exepath;jview
-minversion=1.4
+jvmsearch=javahome;registry;jrepath;jdkpath;exepath;jview
+minversion=1.1
 maxversion=
-currentdir=..\\..\\..
-bundledvm=jre
+currentdir=
 skel_Message=Java has not been found on your computer. Do you want to download it?
-skel_KeyPress=0
+skel_KeyPress=1
+javapropertiescount=1
+javaproperty_name_0=nom1
+javaproperty_value_0=valeur1
