--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -2,7 +2,7 @@ arguments=arg1 arg2 arg3
 mainclassname=JSmoothPropertiesDisplayer
 mainclassname2=SampleApplication
 classpath=sample.jar;..\\jsmoothgen.jar
-jvmsearch=registry;javahome;jrepath;jdkpath;exepath;jview
+jvmsearch=jview;registry;javahome;jrepath;jdkpath;exepath;
 minversion=1.1
 maxversion=
 currentdir=..\\..\\..
@@ -12,3 +12,6 @@ skel_URL=http://www.java.com
 javapropertiescount=1
 javaproperty_name_0=nom1
 javaproperty_value_0=valeur1
+maxheap=98000000
+initialheap=48000000
+ 
