--- a/skeletons/commonjava/Makefile.win
+++ b/skeletons/commonjava/Makefile.win
@@ -11,7 +11,7 @@ LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib"
 INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
 BIN  = CommonJava.a
-CXXFLAGS = $(CXXINCS) 
+CXXFLAGS = $(CXXINCS)$(CUSTOMFLAGS)  
 CFLAGS = $(INCS) 
 
 .PHONY: all all-before all-after clean clean-custom
