--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -2,7 +2,7 @@ arguments=arg1 arg2 arg3
 mainclassname=JSmoothPropertiesDisplayer
 mainclassname2=SampleApplication
 classpath=sample.jar;..\\jsmoothgen.jar
-jvmsearch=jview;registry;javahome;jrepath;jdkpath;exepath;
+jvmsearch=registry;jview;javahome;jrepath;jdkpath;exepath;
 minversion=1.1
 maxversion=
 currentdir=..\\..\\..
