--- a/skeletons/simplewrap/Makefile.win
+++ b/skeletons/simplewrap/Makefile.win
@@ -1,17 +1,18 @@
 # Project: JWrap
 # Makefile created by Dev-C++ 4.9.8.0
 
+RM   = CMD /C DEL
 CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
 RES  = JWrap_private.res
 OBJ  = main.o $(RES)
 LINKOBJ  = main.o $(RES)
-LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib" -L"../commonjava" -mwindows ../commonjava/CommonJava.a 
-INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"../commonjava" 
-CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32"  -I"c:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"../commonjava" 
+LIBS =  -L"/lib" -L"../commonjava" -mwindows ../commonjava/CommonJava.a 
+INCS =  -I"/include"  -I"$(JDK)/include/win32"  -I"$(JDK)/include"  -I"../commonjava" 
+CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"$(JDK)/include/win32"  -I"$(JDK)/include"  -I"../commonjava" 
 BIN  = JWrap.exe
-CXXFLAGS = $(CXXINCS) 
+CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
 
 .PHONY: all all-before all-after clean clean-custom
@@ -20,7 +21,7 @@ all: all-before JWrap.exe all-after
 
 
 clean: clean-custom
-	rm -f $(OBJ) $(BIN)
+	$(RM) $(OBJ) $(BIN)
 
 $(BIN): $(LINKOBJ)
 	$(CPP) $(LINKOBJ) -o "JWrap.exe" $(LIBS)
