--- a/skeletons/consolewrapper/Makefile.win
+++ b/skeletons/consolewrapper/Makefile.win
@@ -1,26 +1,26 @@
 # Project: ConsoleWrapper
 # Makefile created by Dev-C++ 4.9.8.0
 
+RM   = cmd /C DEL
 CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
 RES  = ConsoleWrapper_private.res
 OBJ  = main.o $(RES)
 LINKOBJ  = main.o $(RES)
-LIBS =  -L"C:/Programs/Dev-Cpp-4.9.8.0/lib" -L"../commonjava" ../commonjava/CommonJava.a 
-INCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"../commonjava"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
-CXXINCS =  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/mingw32"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include/c++/backward"  -I"C:/Programs/Dev-Cpp-4.9.8.0/include"  -I"../commonjava"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include"  -I"C:/Program Files/j2sdk_nb/j2sdk1.4.2/include/win32" 
+LIBS =  -L"/lib" -L"../commonjava" ../commonjava/CommonJava.a 
+INCS =  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
+CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
 BIN  = ConsoleWrapper.exe
-CXXFLAGS = $(CXXINCS) 
+CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
 
 .PHONY: all all-before all-after clean clean-custom
 
 all: all-before ConsoleWrapper.exe all-after
 
-
 clean: clean-custom
-	rm -f $(OBJ) $(BIN)
+	$(RM) $(OBJ) $(BIN)
 
 $(BIN): $(LINKOBJ)
 	$(CPP) $(LINKOBJ) -o "ConsoleWrapper.exe" $(LIBS)
