Added more wizard pages.

--- a/resources.properties
+++ b/resources.properties
@@ -1,9 +1,12 @@
-resources.images.new_project_wizban = res/new_project_wizban.gif
-resources.images.classpath_wizban = res/classpath_wizban.gif
-resources.images.jar_wizban = res/jar_wizban.gif
-resources.images.main_class_wizban = res/main_class_wizban.gif
-resources.images.java_app_wizban = res/java_app_wizban.gif
-resources.images.jre_wizban = res/jre_wizban.gif
+# Change the dummy_wizban.gif to the apropriate image, when available.
+# No change in java code needed !
+resources.images.new_project_wizban = res/dummy_wizban.gif
+resources.images.classpath_wizban = res/dummy_wizban.gif
+resources.images.jar_wizban = res/dummy_wizban.gif
+resources.images.main_class_wizban = res/dummy_wizban.gif
+resources.images.java_app_wizban = res/dummy_wizban.gif
+resources.images.jre_wizban = res/dummy_wizban.gif
+resources.images.exe_wizban = res/dummy_wizban.gif
 
 resources.images.add_item = res/add_item.gif
 resources.images.remove_item = res/remove_item.gif
