--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <project name="jsmoothgen" default="jar" basedir=".">
 
-  <!-- set here the properties specific to your computer -->
-  <!-- see the README.txt file for additional information -->
-
+  <!-- set here the properties specific to your computer      -->
+  <!-- see the README.txt file for additional information     -->
+  <!-- DO NOT SKIP THIS PART! REALLY! IT WON'T WORK OTHERWISE -->
   <property name="JDKDIR" value="c:\Program Files\j2sdk_nb\j2sdk1.4.2"/>
   <property name="RM" value="CMD /C DEL"/>
 
@@ -14,7 +14,6 @@
   <!-- What's below is  optional (needed only if you build a dist) -->
   <property name="FOP" value="c:/Programs/fop-0.20.5\fop.bat"/>
   <property name="DOCBOOKBASE" value="c:\programs\docbook-xsl-1.62.0"/>
-
 
  <!-- set here the properties specific the release --> 
 
@@ -121,12 +120,8 @@
     <jar basedir="classes" jarfile="${jsmoothjar-ant}" manifest="src\MANIFEST.txt"/>
   </target>
 
-
-
-
     <!-- 
          Builds the distribution file for jsmooth.
-       
       -->
 
   <target depends="" name="test">
